--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ SimpleITK #==2.0.2
 tornado #==5.1.1
 
 adabelief-pytorch
+elasticdeform
 ipywidgets
 jupyterlab
 numpy
@@ -18,7 +19,7 @@ rich
 seaborn
 seaborn_image
 torch
-wandb
+wandb==0.12.1
 
 varname
 asttokens
