--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ click #==7.1.2
 debugpy #==1.6.2
 dicom2nifti #==2.3.0
 nibabel #==3.2.2
-SimpleITK #==2.0.2
+SimpleITK==2.0.2
 tornado #==5.1.1
 
 adabelief-pytorch
